--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css" rel="stylesheet">
+    <link href="css/hci-friends.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -16,7 +18,23 @@
 </head>
 
 <body>
+    <div class="container">
 	<h1>My HCI Friends</h1>
+
+    <img src="http://lorempixel.com/500/500/people" alt="Mountain View" style="width:290px;height:300px">
+
+    <h3>Fake Friend</h3>
+    <p>All my friends are imaginery</p>
+
+    {{#each friends}}
+      <div class="project" id="{{name}}">
+       <a href="project" class="thumbnail"> 
+          <img class="img-responsive" class="img-rounded" src="{{imageURL}}"/>
+          <a href"#"> <h3 class="fName"> {{name}} </h3> </a>
+          <p>{{description}}</p>
+        </a>
+      </div>
+    {{/each}}
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -30,5 +48,10 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+    <div class="container">
+
+    <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/hci-friends.js"></script>
 </body>
 </html>
